🚑️ fixes usability on mobile, button was too high

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ Main Colors:
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 15vh;
+  padding-top: 30vh;
   color: white;
   font-family: "Tomorrow", sans-serif;
   text-align: center;
